--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,84 @@
-nav {
-  background-color: rgba(200, 60, 200);
+body {
+  background-color: black;
+}
+
+body::after {
+  content: "";
+  background: url('https://mj-gallery.com/566ba53b-9328-4b06-8ca9-2a3af586e0f2/grid_0.png');
+  background-size: 400px;
+  opacity: 0.4;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+h1 {
+  font-size: 3em;
+  margin-left: 1em;
+  padding-top: .2em;
+}
+.header {
+  color: black;
+  background-color: rgba(200, 60, 200, .85);
+}
+.nav {
+  font-size: 1.2em;
+  /* background-color: rgba(200, 60, 200, .85); */
+  color: cyan;
   display: flex;
   justify-content: space-between;
+  font-weight: bold;
 }
 ul {
   list-style-type: none;
   display: flex;
-
+  margin-right: 1em;
+  margin-top: -2.7em;
 }
 li {
   cursor: pointer;
+  margin: 1em;
+}
+li:hover {
+  color: black;
+  font-weight: bold;
+}
+a {
+  font-size: 1.5em;
+  color: inherit;
+  text-decoration: none;
   margin: .7em;
-  margin-top: 0em;
+  margin-top: .4em;
+  /* padding: .2em; */
+
+}
+a:hover {
+  color: black;
+  font-weight: bold;
+}
+.contentContainer {
+  display: flex;
+  color: rgb(0, 180, 255);
+  background-color: rgba(0, 0, 0, .7);
+  margin: 5em;
+  padding: 2em;
+}
+.aboutContainer {
+  margin: 1em;
+  margin-right: 3em;
+}
+.bioImage {
+  filter: hue-rotate(85deg) saturate(300%);
+  max-width: 20em;
+}
+.footer {
+  padding-left: 2em;
+  color: rgb(0, 180, 255);
+  background-color: rgba(0, 0, 0, .7);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
