--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,22 @@ body::after {
 h1 {
   font-size: 3em;
   margin-left: .7em;
-  padding-top: .2em;
+  margin-top: .3em;
+  /* padding-top: .2em; */
 }
-h1::after {
-  margin-left: .1em;
+.cursorContainter {
+  display: flex;
+}
+.cursor {
+  padding-bottom: 2.2em;
+  margin-top: 1.4em;
+  margin-left: .4em;
   content: "";
   width: 8px;
   height: .75em;
   background: cyan;
   display: inline-block;
-  animation: cursor-blink 1.2s steps(2) infinite;
+  animation: cursor-blink 1s steps(2) infinite;
 }
 @keyframes cursor-blink {
   0% {
@@ -64,7 +70,7 @@ a {
   color: inherit;
   text-decoration: none;
   margin: .7em;
-  margin-top: .4em;
+  margin-top: -.7em;
   /* padding: .2em; */
 
 }
