--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body::after {
   z-index: -1;
 }
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-left: .7em;
   margin-top: .3em;
   /* padding-top: .2em; */
@@ -24,11 +24,11 @@ h1 {
   display: flex;
 }
 .cursor {
-  padding-bottom: 2.2em;
-  margin-top: 1.4em;
+  padding-bottom: 1.8em;
+  margin-top: 1.1em;
   margin-left: .4em;
   content: "";
-  width: 8px;
+  width: 3px;
   height: .75em;
   background: cyan;
   display: inline-block;
@@ -44,43 +44,42 @@ h1 {
   background-color: rgba(200, 60, 200, .85);
 }
 .nav {
-  font-size: 1.2em;
+  /* font-size: 1.2em; */
   /* background-color: rgba(200, 60, 200, .85); */
   color: cyan;
   display: flex;
   justify-content: space-between;
   font-weight: bold;
+  width: 100%;
 }
-ul {
+.navLink {
   list-style-type: none;
   display: flex;
-  margin-right: 1em;
-  margin-top: -2.7em;
-}
-li {
   cursor: pointer;
+  margin-top: -2.7em;
   margin: 1em;
 }
-li:hover {
+.navLink:hover {
   color: black;
   font-weight: bold;
 }
-a {
+.navSocial {
   font-size: 1.5em;
   color: inherit;
   text-decoration: none;
   margin: .7em;
-  margin-top: -.7em;
-  /* padding: .2em; */
-
 }
-a:hover {
+.navSocial:hover {
   color: black;
   font-weight: bold;
 }
 .leftList {
+  display:flex;
   margin-top: -2em;
   margin-left: -1.5em;
+}
+.rightList {
+  margin-top: -4em;
 }
 .contentContainer {
   display: flex;
@@ -96,6 +95,28 @@ a:hover {
 .bioImage {
   filter: hue-rotate(85deg) saturate(300%);
   max-width: 20em;
+}
+.columnContainer {
+  display: flex;
+  flex-direction: column;
+  color: rgb(0, 180, 255);
+  background-color: rgba(0, 0, 0, .7);
+  margin: 5em;
+  padding: 2em;
+}
+.projectImage {
+  max-width: 15em;
+}
+.projectContainer {
+  display: flex;
+  flex-direction: column;
+  color: rgb(0, 180, 255);
+  /* background-color: rgba(0, 0, 0, .7); */
+  /* margin: 5em;
+  padding: 2em; */
+}
+.projectBullet {
+
 }
 .footer {
   padding-left: 2em;
