--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,10 @@ summary {
 .projectImage {
   max-width: 17em;
   border-radius: 1em;
+  /* box-shadow: 0px 0px 50px magenta; */
+}
+.projectImage:hover {
+  box-shadow: 0px 0px 250px yellow;
 }
 .projectDeck {
   display: flex;
@@ -124,7 +128,7 @@ summary {
   padding: 1em;
   max-width: 25em;
   border-radius: 2em;
-  /* box-shadow: 0px 0px 50px magenta; */
+
 }
 .projectBullet {
   list-style-type: none;
