colors git links

--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,9 @@ input:focus {
   color: magenta;
   text-decoration: none;
 }
+.pinkLink:hover {
+  text-decoration: underline;
+}
 .footer {
   padding-left: 2em;
   color: rgb(0, 180, 255);
