--- a/src/App.css
+++ b/src/App.css
@@ -326,8 +326,8 @@ ul {
     -webkit-appearance: none;
     appearance: none;
     border: 1px solid rgb(0, 180, 255);
-    width: .7em;
-    height: 1em;
+    width: 1em;
+    height: 1.3em;
     background: black;
     cursor: pointer;
   }
