--- a/src/App.css
+++ b/src/App.css
@@ -265,10 +265,6 @@ ul {
 }
 
 @media only screen and (max-width: 600px) {
-
-  body {
-    /* background-color: yellow; */
-  }
   .nav {
     color: cyan;
     display: flex;
@@ -287,7 +283,7 @@ ul {
     margin-top: -2.5em;
     margin-left: 1em;
     margin-bottom: .2em;
-    padding: ;
+    /* padding: ; */
   }
   .contentContainer {
     padding: .3em;
