--- a/src/App.css
+++ b/src/App.css
@@ -279,7 +279,18 @@ ul {
   width: 100%;
   height: 2.5rem;
 }
-
+.claculatorContainer {
+  border: 1px solid rgb(0, 180, 255);
+}
+.calculatorDisplay {
+  font-size: 2em;
+  padding: .3em;
+  border: 1px solid rgb(0, 180, 255);
+}
+.calculatorButton {
+  margin: .5em;
+  border: 1px solid grey;
+}
 @media only screen and (max-width: 600px) {
   .nav {
     color: cyan;
@@ -343,4 +354,5 @@ ul {
     background: black;
     cursor: pointer;
   }
+ 
 }
