--- a/src/App.css
+++ b/src/App.css
@@ -280,14 +280,19 @@ ul {
   height: 2.5rem;
 }
 .claculatorContainer {
+  display: grid;
   border: 1px solid rgb(0, 180, 255);
 }
 .calculatorDisplay {
+  display: flex;
+  justify-content: flex-end;
+  height: 1.3em;
   font-size: 2em;
   padding: .3em;
   border: 1px solid rgb(0, 180, 255);
 }
 .calculatorButton {
+  cursor: pointer;
   margin: .5em;
   border: 1px solid grey;
 }
