--- a/src/App.css
+++ b/src/App.css
@@ -298,13 +298,22 @@ ul {
   justify-content: flex-end;
   height: 1.3em;
   font-size: 2em;
+  color: limegreen;
   padding: .3em;
   border: 1px solid rgb(0, 180, 255);
 }
 .calculatorButton {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  display: flex;
+  justify-content: center;
   cursor: pointer;
+  
   margin: .5em;
   border: 1px solid grey;
+}
+.calculatorButton:active {
+  background-color: magenta;
 }
 /* Styles for clear, negative, percent, divide buttons */
 .clear {
