--- a/src/App.css
+++ b/src/App.css
@@ -303,6 +303,9 @@ ul {
   padding: .3em;
   border: 1px solid rgb(0, 180, 255);
 }
+.pinkTxt {
+  color: magenta;
+}
 .calculatorButton {
   padding-top: 1em;
   padding-bottom: 1em;
