--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ td {
   left: 0;
   bottom: 0;
   right: 0;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 h1 {
@@ -126,6 +126,9 @@ ul {
   }
 }
 .header {
+  z-index: 10;
+  position: fixed;
+  width: 100vw;
   color: black;
   background-color: rgba(200, 60, 200, .85);
 }
@@ -137,6 +140,7 @@ ul {
   justify-content: space-between;
   font-weight: bold;
   width: 100%;
+  
 }
 .navLink {
   list-style-type: none;
@@ -169,6 +173,8 @@ ul {
   margin-right: 1em;
 }
 .contentContainer {
+  position: relative;
+  top: 6em;
   display: flex;
   color: rgb(0, 180, 255);
   background-color: rgba(0, 0, 0, .7);
@@ -200,6 +206,8 @@ ul {
   animation-iteration-count: infinite;
 }
 .projectContainer {
+  position: relative;
+  top: 6em;
   display: flex;
   flex-direction: column;
   color: rgb(0, 180, 255);
