--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ td {
   position: relative;
 }
 #root::after {
-  background: url('https://mj-gallery.com/566ba53b-9328-4b06-8ca9-2a3af586e0f2/grid_0.png');
+  background: url('/public/circuitBackground.png');
   background-repeat: repeat;
   background-size: 400px;
   opacity: 0.4;
@@ -219,6 +219,10 @@ ul {
   max-width: 17em;
   border-radius: 1em;
   /* box-shadow: 0px 0px 50px magenta; */
+}
+.partyImage {
+  max-width: 100%;
+  max-height: 100%;
 }
 .projectImage:hover {
   box-shadow: 0px 0px 75px magenta;
